src/test/ui/privacy/associated-item-privacy-type-binding.stderr
error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:11:13
   |
LL |         let _: Box<PubTr<AssocTy = u8>>;
   |             ^
...
LL |     priv_trait::mac1!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:11:16
   |
LL |         let _: Box<PubTr<AssocTy = u8>>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac1!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:14:31
   |
LL |         type InSignatureTy2 = Box<PubTr<AssocTy = u8>>;
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac1!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:16:31
   |
LL |         trait InSignatureTr2: PubTr<AssocTy = u8> {}
   |                               ^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac1!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:20:13
   |
LL |         let _: Box<PrivTr<AssocTy = u8>>;
   |             ^
...
LL |     priv_trait::mac2!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:20:16
   |
LL |         let _: Box<PrivTr<AssocTy = u8>>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac2!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:23:31
   |
LL |         type InSignatureTy1 = Box<PrivTr<AssocTy = u8>>;
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac2!();
   |     -------------------- in this macro invocation

error: trait `priv_trait::PrivTr` is private
  --> $DIR/associated-item-privacy-type-binding.rs:25:31
   |
LL |         trait InSignatureTr1: PrivTr<AssocTy = u8> {}
   |                               ^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_trait::mac2!();
   |     -------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:44:13
   |
LL |         let _: Box<PubTrWithParam<AssocTy = u8>>;
   |             ^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:44:16
   |
LL |         let _: Box<PubTrWithParam<AssocTy = u8>>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:47:13
   |
LL |         let _: Box<PubTr<AssocTy = u8>>;
   |             ^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:47:16
   |
LL |         let _: Box<PubTr<AssocTy = u8>>;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:50:35
   |
LL |         pub type InSignatureTy1 = Box<PubTrWithParam<AssocTy = u8>>;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:52:35
   |
LL |         pub type InSignatureTy2 = Box<PubTr<AssocTy = u8>>;
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:54:31
   |
LL |         trait InSignatureTr1: PubTrWithParam<AssocTy = u8> {}
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: type `priv_parent_substs::Priv` is private
  --> $DIR/associated-item-privacy-type-binding.rs:56:31
   |
LL |         trait InSignatureTr2: PubTr<AssocTy = u8> {}
   |                               ^^^^^^^^^^^^^^^^^^^
...
LL |     priv_parent_substs::mac!();
   |     --------------------------- in this macro invocation

error: aborting due to 16 previous errors

